# cppjober

./: .cursorrules  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README-Docker.md  README-Local.md  README.md  docker-compose.yml  ques.md  vcpkg.json
cmake/: FindRdKafka.cmake  Findetcd-cpp-api.cmake  Findnlohmann_json.cmake  Findspdlog.cmake
common/: CMakeLists.txt
common/include/: config_manager.h  cron_parser.h  db_connection_pool.h  etcd_client.h  job.h  job_dao.h  job_storage.h  kafka_client.h  kafka_message_queue.h  ratelimiter.h  stats_manager.h
common/src/: config_manager.cpp  cron_parser.cpp  cron_test.cpp  db_connection_pool.cpp  db_schema.sql  db_schema_update.sql  job.cpp  job_dao.cpp  kafka_message_queue.cpp  ratelimiter.cpp  stats_manager.cpp
common/tests/: CMakeLists.txt  cron_parser_test.cpp
config/: scheduler.conf
doc/: README.md  design_document.md  design_webapi.md  plantuml.plantuml
docker/: README.md
docker/config/: executor.conf  scheduler.conf
docker/mysql/: init.sql
docker/scripts/: start-executor.sh  start-scheduler.sh
executor/: CMakeLists.txt  main.cpp
executor/include/: executor.h
executor/src/: executor.cpp
executor/tests/: CMakeLists.txt  job_cancel_test.cpp  mock_executor.h
scheduler/: CMakeLists.txt  main.cpp
scheduler/config/: prometheus.yml  zookeeper.conf
scheduler/config/alertmanager/: alertmanager.yml
scheduler/config/grafana/dashboards/: scheduler.json
scheduler/config/rules/: scheduler_alerts.yml
scheduler/include/: executor_api.h  executor_registry.h  job_api.h  scheduler.h  stats_api.h  zk_client.h  zk_registry.h
scheduler/src/: executor_api.cpp  executor_registry.cpp  job_api.cpp  scheduler.cpp  stats_api.cpp  zk_client.cpp  zk_registry.cpp
scheduler/tests/: CMakeLists.txt  executor_selection_test.cpp
web-ui/: .eslintrc.js  Dockerfile  README.md  nginx.conf  package.json  vue.config.js
web-ui/public/: index.html
web-ui/src/: App.vue  main.ts
web-ui/src/api/: index.ts
web-ui/src/assets/css/: global.css
web-ui/src/router/: index.ts
web-ui/src/views/: Dashboard.vue  ExecutorList.vue  Home.vue  JobList.vue  JobLog.vue  SystemInfo.vue
